edit package info

--- a/source/intexgral.sty
+++ b/source/intexgral.sty
@@ -21,7 +21,7 @@
 \NeedsTeXFormat{LaTeX2e}
 \RequirePackage{expl3}[2025-05-14]
 \RequirePackage{l3keys2e}
-\ProvidesExplPackage{intexgral}{2025-07-26}{1.0}{A LaTeX package for integrals.}
+\ProvidesExplPackage{intexgral}{2025-07-26}{1.0.0}{A LaTeX package for typesetting integrals.}
 
 \@ifpackagelater{expl3}{2025-05-14}{}{\PackageError{expl3~version~too~old.}}
 
