--- a/doc/documentation-en.tex
+++ b/doc/documentation-en.tex
@@ -82,7 +82,7 @@
 
 \begin{abstract}
 
-While integral composition is very common in \LaTeX, it often proves to be impractical. When the expression becomes complex, it becomes difficult to modify its various elements in a source an illegible source code. To address this problem, the \pkg{intexgral} package offers central macro whose only argument is the integrand. Everything else (limits, differentials\dots) can be modified using a \meta{keyval} interface. Unlike the traditional method, where the user choses the limits order with the active characters \verb|_| and \verb|^|, the package had to establish a convention. Thus, for the two keys that will deal with limits, the assumed input will be \verb|_|\meta{lower limit}\verb|^|\meta{upper limit}. Since this package is written in \pkg{expl3}, it depends on the \LaTeX3 group of packages \pkg{l3kernel} and \pkg{l3package}. In addition, \pkg{intexgral} uses the \pkg{derivative} package to facilitate the manipulation of differentials.  
+While integral composition is prevalent in \LaTeX, it often proves to be impractical. When the expression becomes complex, it becomes difficult to modify its various elements in an illegible source code. To address this problem, the \pkg{intexgral} package offers a central macro whose only argument is the integrand. Everything else (limits, differentials\dots) can be modified using a \meta{keyval} interface. Unlike the traditional method, where the user chooses the limits order with the active characters \verb|_| and \verb|^|, the package had to establish a convention. Thus, for the two keys that will deal with limits, the assumed input will be \verb|_|\meta{lower limit}\verb|^|\meta{upper limit}. Since this package is written in \pkg{expl3}, it depends on the \LaTeX3 group of packages \pkg{l3kernel} and \pkg{l3package}. In addition, \pkg{intexgral} uses the \pkg{derivative} package to facilitate the manipulation of differentials.  
 
 \end{abstract}
 
@@ -108,7 +108,7 @@ These options can be declared woth with the following syntax when the package is
   \begin{syntax}
     \meta{boolean}\hfill(default: false)
   \end{syntax}
-  It is common to see the differentials placed before the integrand in physics papers. This key hence swaps their position
+  It is common to see the differentials placed before the integrand in physics papers. This key hence swaps their position.
 \end{function}
 
 \begin{function}{hide-differentials}
@@ -185,7 +185,7 @@ The starred version of the key expresses the limits as an interval. The directio
   ]{f(x)}
 \end{equation}
 
-The major strength of \texttt{limits} is that it allows ot specify the limits of several integrals and composes them for you. To do this, thge limits must be separated by semicolns to allow the package to correctly evaluate to which integral they belong to.
+The major strength of \texttt{limits} is that it allows you to specify the limits of several integrals and typesets them for you. To do this, the limits must be separated by semicolons to allow the package to correctly evaluate to which integral they belong.
 
 \begin{codehigh}
 \integral[
@@ -207,7 +207,7 @@ The major strength of \texttt{limits} is that it allows ot specify the limits of
   \begin{syntax}
     \meta{boolean}\hfill(default: false)
   \end{syntax}
-  This key separates the different variables of the intragral and isolates them. It is therefore necessary to use it \emph{before} \texttt{limits} so that the latter knows in which mode to operate in. Morevoer, this key requires that we indicate how to separate the integrand. This additional step can be done using the same logic as for the limits, i.e. using a semicolon.
+  This key separates the different variables of the intragral and isolates them. It is therefore necessary to use it \emph{before} \texttt{limits} so that the latter knows in which mode to operate in. Moreover, this key requires that we indicate how to separate the integrand. This additional step can be done using the same logic as for the limits, i.e. using a semicolon.
 \end{function}
 
 \begin{codehigh}
@@ -254,7 +254,7 @@ To function correctly, it is obvious that the keys \texttt{limits} and \texttt{v
 
 \subsection{Symbol (and more about limits)}
 
-The keys \texttt{limits} and \texttt{limits*} are very useful when the final expression of the integral is determined (in other words, when the limits of each variable have been defined). However, this only covers\dots\ the final expressino! For more general cases, they are relativaly inconvenient. To typeset a double integral over a surface S, one would have to write \verb|limits={,;,S}|. Needless to say, it is rather unsuitable for the user and not optimal for the package. Furthermore, the glyph won't be correct. The set of forthcoming keys therefore offers an easy way to modify the integral symbol and limits.
+The keys \texttt{limits} and \texttt{limits*} are very useful when the final expression of the integral is determined (in other words, when the limits of each variable have been defined). However, this only covers\dots\ the final expression! For more general cases, they are relatively inconvenient. To typeset a double integral over a surface S, one would have to write \verb|limits={,;,S}|. Needless to say, it is rather unsuitable for the user and not optimal for the package. Furthermore, the glyph won't be correct. The set of forthcoming keys therefore, offers an easy way to modify the integral symbol and limits.
 
 \subsubsection{Selecting a symbol}
 
@@ -347,7 +347,7 @@ The previous keys (excluding \texttt{nint}) cover a fairly --- I hope --- genera
     \marg{lower limit}\hfill(symbol: \cs{oiint})
     \marg{lower limit}\hfill(symbol: \cs{oiiint})
   \end{syntax}
-  All these keys allow the action of \texttt{int-symb} and \texttt{lower-lim} to be grouped together, making it easier to chose the symbol and the lower bound at the same time. The value of the key is optional, in which case the symbol will change but the bound will remain empty. 
+  All these keys allow the action of \texttt{int-symb} and \texttt{lower-lim} to be grouped, making it easier to choose the symbol and the lower bound at the same time. The value of the key is optional, in which case the symbol will change, but the bound will remain empty.  
 \end{function}
 
 \begin{codehigh}
@@ -529,7 +529,7 @@ V_\textrm{sphere} =
   \begin{syntax}
     \marg{keyval list}
   \end{syntax}
-  This key accepts a list of keys as it would have been written as an optionnal argument of \cs{odif} or its variants. For example, \verb|diff-options={order={2, 3}, var=all}| will be interpreted as \verb|\odif[order={2, 3}, var=all]{...}|.
+  This key accepts a list of keys as it would have been written as an optional argument of \cs{odif} or its variants. For example, \verb|diff-options={order={2, 3}, var=all}| will be interpreted as \verb|\odif[order={2, 3}, var=all]{...}|.
 \end{function}
 
 \begin{codehigh}
@@ -550,7 +550,7 @@ V_\textrm{sphere} =
   \begin{syntax}
     \meta{boolean}
   \end{syntax}
-  This key applies \cs{vec} to each integration variable and places \cs{cdot} as a seperator.
+  This key applies \cs{vec} to each integration variable and places \cs{cdot} as a separator.
 \end{function}
 
 \begin{codehigh}
@@ -604,7 +604,7 @@ V_\textrm{sphere} =
   \begin{syntax}
     \marg{csname}
   \end{syntax}
-  If you use a package which defines symbols that are not part of \pkg{unicode-math}, you can load them by using the \cs{NewIntegralSymbol} macro in the preamble. They will then be accessible via the \texttt{int-symb} key. The argument must take the forme of a macro \emph{without backslash}: for example, \verb|\NewIntegralSymbol{myint}|. Please note that \cs{NewIntegralSymbol} is only a means for the package to recognise pre-existing symbols and their corresponding macros internally. It is not a way to create a new glyph. It is the users responsibility to load the necessary packages so that the desired symbols are defined.
+  If you use a package which defines symbols that are not part of \pkg{unicode-math}, you can load them by using the \cs{NewIntegralSymbol} macro in the preamble. They will then be accessible via the \texttt{int-symb} key. The argument must take the form of a macro \emph{without backslash}: for example, \verb|\NewIntegralSymbol{myint}|. Please note that \cs{NewIntegralSymbol} is only a means for the package to recognise pre-existing symbols and their corresponding macros internally. It is not a way to create a new glyph. It is the user's responsibility to load the necessary packages so that the desired symbols are defined.
 \end{function}
 
 \subsection{Looking back at limits}
@@ -613,7 +613,7 @@ V_\textrm{sphere} =
   \begin{syntax}
     \marg{keyword}\marg{limits}
   \end{syntax}
-  It is common to have to specify the same limits in an integral. To make them easier to write, the \texttt{limits(*)} key(s) also accept a keyword designating llimits defined by one of these four macros:
+  It is common to have to specify the same limits in an integral. To make them easier to write, the \texttt{limits(*)} key(s) also accept a keyword designating limits defined by one of these four macros:
 \end{function}
 \begin{itemize}
   \item \cs{NewLimitsKeyword} creates a new keyword and issues an error if it already exists.
@@ -669,10 +669,8 @@ Using one of the previous examples, we could modify the expression of the integr
   \begin{syntax}
     \marg{keyword}\marg{differentials}\oarg{jacobian}
   \end{syntax}
-  Similarly, the same groups of differentials often resurface. It is therefore also possible to define keywords whose comma list is predefined (the variants have the same behaviour).
+  Similarly, the same groups of differentials often resurface. It is therefore also possible to define keywords whose comma list is predefined (the variants have the same behaviour). The sole difference is that we can also specify the Jacobian. The latter must also be a comma list, as it allows the package to split it when the \texttt{int-split} mode is enabled. Its display is controlled by the \texttt{jacobian} key as explained above.
 \end{function}
-
-The sole difference is that we can also specify the Jacobian. The latter must also be a comma list, as it allows the package to split it when the \texttt{int-split} mode is enabled. Its display is controlled by the \texttt{jacobian} key as explained above.
 
 \begin{codehigh}
 \integral[
