--- a/doc/intexgral-doc-en.tex
+++ b/doc/intexgral-doc-en.tex
@@ -37,7 +37,6 @@
 \usepackage[a]{esvect}
 \usepackage{polyglossia}
 \setmainlanguage{english}
-\usepackage{csquotes}
 
 \usepackage{xcolor}
 \definecolor{RoyalBlue}{RGB}{0, 35, 102}
@@ -65,7 +64,7 @@
 \GetFileInfo{intexgral.sty}
 
 \title{%
-  \pkg{intexgral} package%
+  The \pkg{intexgral} package%
   \thanks{This file describes \fileversion, released \filedate}%
 }
 
