--- a/intexgral/intexgral.sty
+++ b/intexgral/intexgral.sty
@@ -3,7 +3,7 @@
 % Copyright (C) 2025 Valentin Dao
 %
 % This work may be distributed and/or modified under the
-% conditions of the LaTeX Project Public License, either version 1.3c
+% conditions of the LaTeX Project Public License, either version 1.3
 % of this license or (at your option) any later version.
 % The latest version of this license is in
 %
