--- a/package/intexgral-doc-en.tex
+++ b/package/intexgral-doc-en.tex
@@ -620,7 +620,7 @@ V_\textrm{sphere} =
   \item \cs{NewLimitsKeyword} creates a new keyword and issues an error if it already exists.
   \item \cs{RenewLimitsKeyword} redefines a keyword and issues an error if it does not already exist.
   \item \cs{ProvideLimitsKeyword} creates a keyword only if it doesn't already exist. No error message will be issued if it is the case.
-  \item \cs{DeclareLimitsKeyword} creates a new keyword no matter what, overwriting any previous definitions.
+  \item \cs{DeclareLimitsKeyword} creates a new keyword no matter what, overwritting any previous definitions.
 \end{itemize}
 
 Using one of the previous examples, we could modify the expression of the integral as follows:
